menu section, pizza section made[HTML, CSS] , menu.js added(switch between sections in menu[pizza, sauce, promotion, drinks])

--- a/index.html
+++ b/index.html
@@ -414,9 +414,6 @@
             </div>
         </section>
 
-
-
-
         <section class="members wrapper">
             <h2 class="members__heading" id="members">Nasi pracownicy</h2>
 
@@ -459,200 +456,197 @@
 
         </section>
 
-        <!-- <section class="menu-section" id="menu">
-            <div class="menu-container wrapper">
-                <div class="menu-header">
-                    <p class="p1" >Dowiedz się więcej</p>
-                    <p class="p2">Nasze Menu</p>
-                    <p class="p3">Sprawdź sam!</p>
+        <section class="menu wrapper" id="menu">
+            <h2 class="menu__heading">Nasze Menu</h2>
+            <div class="menu__list">
+                <a class="menu-pizza">Pizza</a>
+                <a class="menu-sauce">Sosy</a>
+                <a class="menu-offer">Pizza Promocyjna</a>
+                <a class="menu-drink">Napoje</a>
+            </div>
+
+            <div class="pizza">
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>
+                            1. Margharita
+                            <i title="Wegetariańskie" class="fa-solid fa-leaf"></i>
+                        </p>
+                        <div class="pizza__components">
+                            <p>Sos, ser</p>
+                        </div>
+                    </div>
+                    <div class="pizza__prices">
+                        <p>20,00zł</p>
+                        <p>25,00zł</p>
+                        <p>36,00zł</p>
+                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
                 </div>
-                <div class="menu-list">
-                    <a href="#menu-pizza">Pizza</a>
-                    <a href="#menu-sauce">Sosy</a>
-                    <a href="#menu-offer">Pizza Promocyjna</a>
-                    <a href="#menu-drink">Napoje</a>
+
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>
+                            2. Pepperoni
+                            <i title="Ostre" class="fa-solid fa-pepper-hot"></i>
+                        </p>
+                        <div class="pizza__components">
+                            <p>sos, ser, czosnek, salami, papryka pepperoni</p>
+                        </div>
+                    </div>
+                    <div class="pizza__prices">
+                        <p>20,00zł</p>
+                        <p>25,00zł</p>
+                        <p>36,00zł</p>
+                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
                 </div>
-                <hr />
-                <div class="pizza-choice">
 
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>
-                                1. Margharita
-                                <i title="Wegetariańskie" class="fa-solid fa-leaf"></i>
-                            </p>
-                            <div class="components">
-                                <p>Sos, ser</p>
-                            </div>
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>
+                            3. Sycylijska
+                            <i title="Owoce morza" class="fa-solid fa-fish"></i>
+                        </p>
+                        <div class="pizza__components">
+                            <p>sos, ser, cebula, szynka, tuńczyk, oliwki</p>
                         </div>
-                        <div class="prices">
-                            <p>20,00zł</p>
-                            <p>25,00zł</p>
-                            <p>36,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
                     </div>
-                    <hr />
+                    <div class="pizza__prices">
+                        <p>30,00zł</p>
+                        <p>35,00zł</p>
+                        <p>45,00zł</p>
+                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
+                </div>
 
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>
-                                2. Pepperoni
-                                <i title="Ostre" class="fa-solid fa-pepper-hot"></i>
-                            </p>
-                            <div class="components">
-                                <p>sos, ser, czosnek, salami, papryka pepperoni</p>
-                            </div>
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>4. Hawajska</p>
+                        <div class="pizza__components">
+                            <p>sos, ser, szynka, ananas</p>
                         </div>
-                        <div class="prices">
-                            <p>20,00zł</p>
-                            <p>25,00zł</p>
-                            <p>36,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
                     </div>
-                    <hr />
+                    <div class="pizza__prices">
+                        <p>24,00zł</p>
+                        <p>29,00zł</p>
+                        <p>40,00zł</p>
+                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
+                </div>
 
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>
-                                3. Sycylijska
-                                <i title="Owoce morza" class="fa-solid fa-fish"></i>
-                            </p>
-                            <div class="components">
-                                <p>sos, ser, cebula, szynka, tuńczyk, oliwki</p>
-                            </div>
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>5. Uczta Mięsna</p>
+                        <div class="pizza__components">
+                            <p>sos, ser, szynka, salami, kurczak, boczek, kabanos</p>
                         </div>
-                        <div class="prices">
-                            <p>30,00zł</p>
-                            <p>35,00zł</p>
-                            <p>45,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
                     </div>
-                    <hr />
+                    <div class="pizza__prices">
+                        <p>36,00zł</p>
+                        <p>44,00zł</p>
+                        <p>52,00zł</p>
+                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
+                </div>
 
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>4. Hawajska</p>
-                            <div class="components">
-                                <p>sos, ser, szynka, ananas</p>
-                            </div>
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>
+                            6. Salsa <i title="Ostre" class="fa-solid fa-pepper-hot"></i>
+                        </p>
+                        <div class="pizza__components">
+                            <p>sos, ser, szynka, cebula, kabanos, papryka pepperoni</p>
                         </div>
-                        <div class="prices">
-                            <p>24,00zł</p>
-                            <p>29,00zł</p>
-                            <p>40,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
                     </div>
-                    <hr />
+                    <div class="pizza__prices">
+                        <p>31,00zł</p>
+                        <p>36,00zł</p>
+                        <p>47,00zł</p>
+                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
+                </div>
 
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>5. Uczta Mięsna</p>
-                            <div class="components">
-                                <p>sos, ser, szynka, salami, kurczak, boczek, kabanos</p>
-                            </div>
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>
+                            7. Cudny Ogród
+                            <i title="Wegetariańskie" class="fa-solid fa-leaf"></i>
+                        </p>
+                        <div class="pizza__components">
+                            <p>sos, szpinak, ser, cebula, pomidor, kukurydza</p>
                         </div>
-                        <div class="prices">
-                            <p>36,00zł</p>
-                            <p>44,00zł</p>
-                            <p>52,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
                     </div>
-                    <hr />
+                    <div class="pizza__prices">
+                        <p>26,00zł</p>
+                        <p>31,00zł</p>
+                        <p>42,00zł</p>
+                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
+                </div>
 
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>
-                                6. Salsa <i title="Ostre" class="fa-solid fa-pepper-hot"></i>
-                            </p>
-                            <div class="components">
-                                <p>sos, ser, szynka, cebula, kabanos, papryka pepperoni</p>
-                            </div>
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>
+                            8. Wegetariańska
+                            <i title="Wegetariańskie" class="fa-solid fa-leaf"></i>
+                        </p>
+                        <div class="pizza__components">
+                            <p>sos, ser, pieczarki, papryka, kukurydza, brokuły</p>
                         </div>
-                        <div class="prices">
-                            <p>31,00zł</p>
-                            <p>36,00zł</p>
-                            <p>47,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
                     </div>
-                    <hr />
+                    <div class="pizza__prices">
+                        <p>26,00zł</p>
+                        <p>31,00zł</p>
+                        <p>42,00zł</p>
+                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
+                </div>
 
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>
-                                7. Cudny Ogród
-                                <i title="Wegetariańskie" class="fa-solid fa-leaf"></i>
-                            </p>
-                            <div class="components">
-                                <p>sos, szpinak, ser, cebula, pomidor, kukurydza</p>
-                            </div>
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>9. Fantazja</p>
+                        <div class="pizza__components">
+                            <p>sos, ser, cebula, szynka, kurczak, papryka</p>
                         </div>
-                        <div class="prices">
-                            <p>26,00zł</p>
-                            <p>31,00zł</p>
-                            <p>42,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
                     </div>
-                    <hr />
+                    <div class="pizza__prices">
+                        <p>31,00zł</p>
+                        <p>36,00zł</p>
+                        <p>47,00zł</p>
+                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
+                </div>
 
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>
-                                8. Wegetariańska
-                                <i title="Wegetariańskie" class="fa-solid fa-leaf"></i>
-                            </p>
-                            <div class="components">
-                                <p>sos, ser, pieczarki, papryka, kukurydza, brokuły</p>
-                            </div>
+                <div class="pizza__list">
+                    <div class="pizza__name">
+                        <p>10. Capriciosa</p>
+                        <div class="pizza__components">
+                            <p>sos, ser, szynka, pieczarki</p>
                         </div>
-                        <div class="prices">
-                            <p>26,00zł</p>
-                            <p>31,00zł</p>
-                            <p>42,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
                     </div>
-                    <hr />
-
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>9. Fantazja</p>
-                            <div class="components">
-                                <p>sos, ser, cebula, szynka, kurczak, papryka</p>
-                            </div>
-                        </div>
-                        <div class="prices">
-                            <p>31,00zł</p>
-                            <p>36,00zł</p>
-                            <p>47,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
+                    <div class="pizza__prices">
+                        <p>25,00zł</p>
+                        <p>30,00zł</p>
+                        <p>41,00zł</p>
                     </div>
-                    <hr />
-
-                    <div class="pizza-list">
-                        <div class="pizza-name">
-                            <p>10. Capriciosa</p>
-                            <div class="components">
-                                <p>sos, ser, szynka, pieczarki</p>
-                            </div>
-                        </div>
-                        <div class="prices">
-                            <p>25,00zł</p>
-                            <p>30,00zł</p>
-                            <p>41,00zł</p>
-                        </div>
-                        <button class="btn">Dodaj do koszyka</button>
-                    </div>
+                    <button class="pizza__btn">Dodaj do koszyka</button>
                 </div>
             </div>
-        </section> -->
+
+            <div class="sauce not-visible">
+                sauce
+            </div>
+
+            <div class="promotion not-visible">
+                promotion
+            </div>
+
+            <div class="drinks not-visible">
+                drinks
+            </div>
+
+        </section>
 
         <!-- <section class="contact-section wrapper" id="contact">
             <div class="contact-header">
@@ -794,7 +788,7 @@
                             ></textarea>
                         </div>
                     </div>
-                    <hr />
+                    
                     <div class="attachment-container">
                         <p>Dodaj załącznik zdjęcie/wideo</p>
                         <label for="myfile">
@@ -810,7 +804,7 @@
                             </div>
                         </label>
                     </div>
-                    <hr />
+                    
                     <div class="kind-of-contact-container">
                         <p class="p-above">Jak możemy się z Tobą skontaktować?</p>
                         <div class="checkbox-container">
@@ -879,6 +873,7 @@
     <script src="./js/mobileNav.js"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/opinion.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
