contact section made[HTML, CSS]

--- a/index.html
+++ b/index.html
@@ -648,59 +648,43 @@
 
         </section>
 
-        <!-- <section class="contact-section wrapper" id="contact">
-            <div class="contact-header">
-                <p class="p1">Masz pytania?</p>
-                <p class="p2">Skontaktuj się z nami</p>
-                <p class="p3">Napisz lub zadzwoń do nas!</p>
-            </div>
+        <section class="contact wrapper" id="contact">
+            <h2 class="contact__heading">Skontaktuj się z nami</h2>
 
-            <div class="contact-container">
-                <div class="map-container">
+            <div class="contact__container">
+                <div class="contact__map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2549.7182326473317!2d19.124464615939544!3d50.27851950761916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716db660f473db7%3A0x8c20b95b2c176305!2sDworzec%20PKP%20Sosnowiec!5e0!3m2!1sen!2spl!4v1659548123421!5m2!1sen!2spl"
-                        width="100%"
-                        height="100%"
-                        style="border: 0"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"
-                    ></iframe>
+                        width="100%" height="100%" style="border: 0" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
-                <div class="contact-info">
-                    <div>
-                        <p>Kamienna 31a</p>
-                        <p>10-200 Dąbrowa Górnicza</p>
-                        <p>Czujna 17 20-100</p>
-                        <p>Sosnowiec</p>
+                <div class="contact__info">
+                    <div class="contact__info-el">
+                        <p> Wolna 31a 10-200 Dąbrowa Górnicza </p>
+                        <p> Czujna 17 20-100 Sosnowiec </p>
+
                     </div>
-                    <div>
+                    <div class="contact__info-el">
                         <p>pizzeriada@gmail.com</p>
                     </div>
-                    <div>
-                        <p>DĄBROWA GÓRNICZA</p>
-                        <p>tel: 48+ 111 222 333</p>
-                        <p>SOSNOWIEC</p>
-                        <p>tel: 48+ 333 222 111</p>
+                    <div class="contact__info-el">
+                        <p>DĄBROWA GÓRNICZA: 111 222 333</p>
+                        <p>SOSNOWIEC: 333 222 111</p>
                     </div>
-                    <div class="contact-social">
-                        <a href="https://twitter.com/" target="_blank"
-                            ><i class="fa-brands fa-twitter-square"></i
-                        ></a>
-                        <a href="https://www.facebook.com/" target="_blank"
-                            ><i class="fa-brands fa-facebook-square"></i
-                        ></a>
-                        <a href="https://www.instagram.com/?hl=en" target="_blank"
-                            ><i class="fa-brands fa-instagram-square"></i
-                        ></a>
-                        <a href="https://www.youtube.com/" target="_blank"
-                            ><i class="fa-brands fa-youtube-square"></i
-                        ></a>
+                    <div class="contact__info-el contact__info-social">
+                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i
+                                class="fa-brands fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com/?hl=en" target="_blank"><i
+                                class="fa-brands fa-instagram-square"></i></a>
+                        <a href="https://www.youtube.com/" target="_blank"><i
+                                class="fa-brands fa-youtube-square"></i></a>
                     </div>
                 </div>
+                
             </div>
-        </section> -->
+        </section>
 
         <!-- <section class="contact-form-section wrapper">
             <div class="contact-form-container">
